--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "optimize:images": "node scripts/optimize-images.js",
     "seo:audit": "npm run lighthouse && npm run pa11y",
     "performance:audit": "npm run lighthouse:desktop && npm run lighthouse:mobile",
-    "quality:check": "npm run check && npm run seo:audit"
+    "quality:check": "npm run check && npm run seo:audit",
+    "dev:remote": "concurrently -k -n dev,tunnel -c auto,auto \"astro dev\" \"node scripts/tunnel.js\""
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.12",
@@ -72,11 +73,13 @@
     "astro-compress": "2.3.8",
     "astro-eslint-parser": "^1.2.2",
     "cli-progress": "^3.12.0",
+    "concurrently": "^9.2.0",
     "eslint": "^9.33.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.3.0",
     "js-yaml": "^4.1.0",
     "lighthouse": "^12.8.1",
+    "localtunnel": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
     "nodemon": "^3.1.10",
     "pa11y": "^8.0.0",
