chore(git): ignore dev.log, dev.pid, preview.*, and tunnel*

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 auto-deploy.log
+dev.log
+dev.pid
+preview.*
+tunnel*
 
 
 # environment variables
