Initial commit - Somerset Window Cleaning v3 with EmailJS and Supabase auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
-    }
+    },
+    "sourceMap": false,
+    "inlineSourceMap": false,
+    "inlineSources": false
   },
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist/"]
