--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "framework": "astro",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
+  "public": true,
   "headers": [
     {
       "source": "/(.*)",
